--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.3.8
   flutter_svg: ^0.22.0
+  email_validator: ^2.0.1
+  firebase_auth: ^3.1.1
+  provider: ^6.0.0
+  firebase_core: ^1.6.0
 
 dev_dependencies:
   flutter_test:
