--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^3.1.1
   provider: ^6.0.0
   firebase_core: ^1.6.0
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
