--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -38,6 +38,7 @@ linter:
     prefer_iterable_whereType : false
     prefer_single_quotes : false
     prefer_spread_collections : false
+    avoid_print: false
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
