--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   provider: ^6.0.0
   firebase_core: ^1.6.0
   flutter_spinkit: ^5.1.0
+  cloud_firestore: ^3.1.0
+  font_awesome: ^5.10.1
 
 dev_dependencies:
   flutter_test:
