--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.flutterfirebasecrud">
       <uses-permission android:name="android.permission.INTERNET"/> 
+      <uses-permission android:name="android.permission.WAKE_LOCK" />
    <application
         android:label="flutterfirebasecrud"
         android:icon="@mipmap/ic_launcher">
