--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_spinkit: ^5.1.0
   cloud_firestore: ^3.1.0
   font_awesome: ^5.10.1
+  flutter_staggered_animations: ^1.0.0
+  video_player: ^2.2.7
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +76,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/images/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
