--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
     package="com.example.flutterfirebasecrud">
       <uses-permission android:name="android.permission.INTERNET"/> 
       <uses-permission android:name="android.permission.WAKE_LOCK" />
+      <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
    <application
-        android:label="flutterfirebasecrud"
+        android:label="EA Blog"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
