--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   font_awesome: ^5.10.1
   flutter_staggered_animations: ^1.0.0
   video_player: ^2.2.7
+  connectivity: ^3.0.6
+  package_info: ^2.0.2
+  url_launcher: ^6.0.12
+  
 
 dev_dependencies:
   flutter_test:
@@ -66,7 +70,12 @@ flutter:
     - family: Arimo
       fonts:
         - asset: assets/fonts/Arimo-Regular.ttf
-        - asset: assets/fonts/Arimo-Bold.ttf  
+        - asset: assets/fonts/Arimo-Bold.ttf
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/Montserrat-Bold.ttf
+        - asset: assets/fonts/Montserrat-Regular.ttf
+        - asset: assets/fonts/Montserrat-SemiBold.ttf 
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
